--- a/client/package.json
+++ b/client/package.json
@@ -2,9 +2,13 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080/",
   "dependencies": {
+    "chart.js": "^2.7.1",
     "react": "^16.1.1",
+    "react-dimensions": "^1.3.1",
     "react-dom": "^16.1.1",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17"
   },
   "scripts": {
