--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "server": "nodemon server.js",
     "client": "npm run start --prefix client",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "test-client": "npm test --prefix client"
+    "test-client": "npm test --prefix client",
+    "install-client": "npm install --prefix client",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "Daniel Rosensweig",
   "license": "ISC",
